--- a/notes/min_max_inclusion_exclusion.md.ipynb
+++ b/notes/min_max_inclusion_exclusion.md.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "$Kthmax(S)$ = $\\sum_{T \\subseteq S}{(-1)^{\\vert T \\vert -k}\\binom{\\vert T \\vert -1}{k-1}\\min(T)}$,\n",
     "\n",
-    "$Kthmmin(S)$ = $\\sum_{T \\subseteq S}{(-1)^{\\vert T \\vert -k}\\binom{\\vert T \\vert -1}{k-1}\\max(T)}$,\n",
+    "$Kthmin(S)$ = $\\sum_{T \\subseteq S}{(-1)^{\\vert T \\vert -k}\\binom{\\vert T \\vert -1}{k-1}\\max(T)}$,\n",
     "\n",
     "again, it has an expectation form:\n",
     "\n",
