--- a/notes/formal_power_series.md.ipynb
+++ b/notes/formal_power_series.md.ipynb
@@ -13,7 +13,11 @@
     "\n",
     "$\\sum_{i=0}^{\\infty}{x^{ik}}=\\frac{1}{1-x^k}$\n",
     "\n",
-    "$\\sum_{i=0}^{\\infty}{c^ix^{ik}}=\\frac{1}{1-cx^k}$"
+    "$\\sum_{i=0}^{\\infty}{c^ix^{ik}}=\\frac{1}{1-cx^k}$\n",
+    "\n",
+    "$\\sum_{i=0}^{\\infty}{\\frac{x^i}{i!}}=e^x$\n",
+    "\n",
+    "$x\\frac{\\partial}{\\partial{x}}\\sum_{i=0}^{\\infty}{x^i}=\\sum_{i=0}^{\\infty}{ix^i}$\n"
    ]
   }
  ],
