--- a/notes/formal_power_series.md.ipynb
+++ b/notes/formal_power_series.md.ipynb
@@ -17,7 +17,11 @@
     "\n",
     "$\\sum_{i=0}^{\\infty}{\\frac{x^i}{i!}}=e^x$\n",
     "\n",
-    "$x\\frac{\\partial}{\\partial{x}}\\sum_{i=0}^{\\infty}{x^i}=\\sum_{i=0}^{\\infty}{ix^i}$\n"
+    "$x\\frac{\\partial}{\\partial{x}}\\sum_{i=0}^{\\infty}{x^i}=\\sum_{i=0}^{\\infty}{ix^i}$\n",
+    "\n",
+    "$\\sum_{i=0}^{n}{(-1)^i\\binom{n}{i}}=(1-x)^n$\n",
+    "\n",
+    "$\\sum_{i=0}^{\\infty}{\\binom{n+i}{i}}=\\frac{1}{(1-x)^{n+1}}$\n"
    ]
   }
  ],
