--- a/notes/formal_power_series.md.ipynb
+++ b/notes/formal_power_series.md.ipynb
@@ -17,11 +17,15 @@
     "\n",
     "$\\sum_{i=0}^{\\infty}{\\frac{x^i}{i!}}=e^x$\n",
     "\n",
-    "$x\\frac{\\partial}{\\partial{x}}\\sum_{i=0}^{\\infty}{x^i}=\\sum_{i=0}^{\\infty}{ix^i}$\n",
+    "$x\\frac{\\partial}{\\partial{x}}\\sum_{i=0}^{\\infty}{a_ix^i}=\\sum_{i=0}^{\\infty}{ia_ix^i}$\n",
     "\n",
     "$\\sum_{i=0}^{n}{(-1)^i\\binom{n}{i}}=(1-x)^n$\n",
     "\n",
-    "$\\sum_{i=0}^{\\infty}{\\binom{n+i}{i}}=\\frac{1}{(1-x)^{n+1}}$\n"
+    "$\\sum_{i=0}^{\\infty}{\\binom{n+i}{i}}=\\frac{1}{(1-x)^{n+1}}$\n",
+    "\n",
+    "平移: $[x^n]x^tF(x)=F[n-t]$\n",
+    "\n",
+    "拉伸: $F(x^k)=\\sum_{i=0}^{\\infty}{F[i]x^{ik}}$"
    ]
   }
  ],
