--- a/notes/binomial.md.ipynb
+++ b/notes/binomial.md.ipynb
@@ -7,31 +7,37 @@
    "source": [
     "# 二项式\n",
     "\n",
-    "$\\binom{n}{m}$ = $\\frac{n!}{m!(n-m)!}$\n",
+    "$\\binom{n}{m}=\\frac{n!}{m!(n-m)!}$\n",
     "\n",
-    "对称性: $\\binom{n}{m}$ = $\\binom{n}{n-m}$\n",
+    "对称性: $\\binom{n}{m}=\\binom{n}{n-m}$\n",
     "\n",
-    "吸收/释放: $\\binom{n}{m}$ = $\\frac{n}{m}\\binom{n-1}{m-1}$\n",
+    "吸收/释放: $\\binom{n}{m}=\\frac{n}{m}\\binom{n-1}{m-1}$\n",
     "\n",
-    "二项式定理: $(x+y)^k$ = $\\sum_{i=0}^{k}{\\binom{k}{i}x^iy^{k-i}}$\n",
+    "二项式定理: $(x+y)^k=\\sum_{i=0}^{k}{\\binom{k}{i}x^iy^{k-i}}$\n",
     "\n",
-    "递推: $\\binom{n}{m}$ = $\\binom{n-1}{m} + \\binom{n-1}{m-1}$\n",
+    "递推: $\\binom{n}{m}=\\binom{n-1}{m}+\\binom{n-1}{m-1}$\n",
     "\n",
-    "平行求和: $\\sum_{i=0}^{n}{\\binom{r+i}{i}}$ = $\\binom{r+n+1}{n}$\n",
+    "平行求和: $\\sum_{i=0}^{n}{\\binom{r+i}{i}}=\\binom{r+n+1}{n}$\n",
     "\n",
-    "上指标求和: $\\sum_{i=0}^{n}{\\binom{i}{m}}$ = $\\binom{n+1}{m+1}$\n",
+    "上指标求和: $\\sum_{i=0}^{n}{\\binom{i}{m}}=\\binom{n+1}{m+1}$\n",
     "\n",
     "范德蒙德卷积: \n",
     "\n",
-    "$F(x)$ = $(1+x)^{n+m}$ = $(1+x)^n(1+x)^m$\n",
+    "$F(x)$ = $(1+x)^{n+m}=(1+x)^n(1+x)^m$\n",
     "\n",
-    "$F[k]$ = $\\binom{n+m}{k}$ = $\\sum_{i=0}^{k}{\\binom{n}{i}\\binom{m}{k-i}}$\n",
+    "$F[k]$ = $\\binom{n+m}{k}=\\sum_{i=0}^{k}{\\binom{n}{i}\\binom{m}{k-i}}$\n",
     "\n",
     "广义二项式:\n",
     "\n",
-    "$\\binom{\\alpha}{i}$ = $\\frac{\\alpha^{\\underline{i}}}{i!}$, 其中 $\\alpha$ 可以不为整数\n",
+    "$\\binom{\\alpha}{i}=\\frac{\\alpha^{\\underline{i}}}{i!}$, 其中 $\\alpha$ 可以不为整数\n",
     "\n",
-    "$(x+y)^{\\alpha}$ = $\\sum_{i=0}^{\\infty}{\\binom{\\alpha}{i}x^iy^{\\alpha-i}}$"
+    "$(x+y)^{\\alpha}=\\sum_{i=0}^{\\infty}{\\binom{\\alpha}{i}x^iy^{\\alpha-i}}$\n",
+    "\n",
+    "上指标反转: $\\binom{r}{k}=(-1)^k\\binom{k-r-1}{k}$\n",
+    "\n",
+    "$r^{\\underline{k}}=(-1)^k(-r)^{\\overline{k}}=(-1)^k(k-r-1)^{\\underline{k}}$\n",
+    "\n",
+    "$\\sum_{i=0}^{\\infty}{\\binom{2i}{i}x^i}=\\sum_{i=0}^{\\infty}{\\binom{-\\frac{1}{2}}{i}(-4x)^i}=(1-4x)^{-\\frac{1}{2}}$"
    ]
   }
  ],
