--- a/notes/binomial.md.ipynb
+++ b/notes/binomial.md.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "$F[k]$ = $\\binom{n+m}{k}=\\sum_{i=0}^{k}{\\binom{n}{i}\\binom{m}{k-i}}$\n",
     "\n",
-    "广义二项式:\n",
+    "广义二项式/广义二项式定理:\n",
     "\n",
     "$\\binom{\\alpha}{i}=\\frac{\\alpha^{\\underline{i}}}{i!}$, 其中 $\\alpha$ 可以不为整数\n",
     "\n",
@@ -37,7 +37,15 @@
     "\n",
     "$r^{\\underline{k}}=(-1)^k(-r)^{\\overline{k}}=(-1)^k(k-r-1)^{\\underline{k}}$\n",
     "\n",
-    "$\\sum_{i=0}^{\\infty}{\\binom{2i}{i}x^i}=\\sum_{i=0}^{\\infty}{\\binom{-\\frac{1}{2}}{i}(-4x)^i}=(1-4x)^{-\\frac{1}{2}}$"
+    "$\\sum_{i=0}^{\\infty}{\\binom{2i}{i}x^i}=\\sum_{i=0}^{\\infty}{\\binom{-\\frac{1}{2}}{i}(-4x)^i}=(1-4x)^{-\\frac{1}{2}}$\n",
+    "\n",
+    "下降幂和上升幂的二项式定理:\n",
+    "\n",
+    "$(x+y)^{\\underline{n}}=\\sum_{i=0}^{n}{\\binom{n}{i}x^{\\underline{i}}y^{\\underline{n-i}}}$\n",
+    "\n",
+    "$(x+y)^{\\overline{n}}=\\sum_{i=0}^{n}{\\binom{n}{i}x^{\\overline{i}}y^{\\overline{n-i}}}$\n",
+    "\n",
+    "(tips: 挪一挪实际上就是范德蒙德卷积)\n"
    ]
   }
  ],
