--- a/notes/formal_power_series.md.ipynb
+++ b/notes/formal_power_series.md.ipynb
@@ -25,7 +25,9 @@
     "\n",
     "平移: $[x^n]x^tF(x)=F[n-t]$\n",
     "\n",
-    "拉伸: $F(x^k)=\\sum_{i=0}^{\\infty}{F[i]x^{ik}}$"
+    "拉伸: $F(x^k)=\\sum_{i=0}^{\\infty}{F[i]x^{ik}}$\n",
+    "\n",
+    "$\\sum_{i=0}^{\\infty}{\\frac{a^{\\underline{i}}}{i!}x^i}=(1+x)^a$"
    ]
   }
  ],
