--- a/notes/newtons_identities.md.ipynb
+++ b/notes/newtons_identities.md.ipynb
@@ -70,7 +70,7 @@
     "\n",
     "$\\sum_{k=0}^{\\infty}{e_k(x_1,x_2,...,x_n)(-t)^k}=\\Pi_{i=1}^{n}{(1-x_it)}$,\n",
     "\n",
-    "$[x^m](\\sum_{k=0}^{\\infty}{e_k(x_1,x_2,...x_n)(-t)^k})(\\sum_{k=0}^{\\infty}{h_k(x_1,x_2,...x_n)t^k})=[x^m](\\Pi_{i=1}^{n}{(1-x_it)})(\\frac{1}{\\Pi_{i=1}^{n}{(1-x_it)}})=[x^m]{(1)}=[m==0]$,\n",
+    "$[x^m](\\sum_{k=0}^{\\infty}{e_k(x_1,x_2,...x_n)(-t)^k})(\\sum_{k=0}^{\\infty}{h_k(x_1,x_2,...x_n)t^k})=[x^m](\\Pi_{i=1}^{n}{(1-x_it)})(\\frac{1}{\\Pi_{i=1}^{n}{(1-x_it)}})=[x^m]{(1)}=[m=0]$,\n",
     "\n",
     "extract coefficients on both sides for $m\\gt 0$ and the prove done.\n",
     "\n",
