--- a/notes/formal_power_series.md.ipynb
+++ b/notes/formal_power_series.md.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "75654df4",
    "metadata": {},
    "source": [
     "# 形式幂级数\n",
@@ -27,7 +26,11 @@
     "\n",
     "拉伸: $F(x^k)=\\sum_{i=0}^{\\infty}{F[i]x^{ik}}$\n",
     "\n",
-    "$\\sum_{i=0}^{\\infty}{\\frac{a^{\\underline{i}}}{i!}x^i}=(1+x)^a$"
+    "$\\sum_{i=0}^{\\infty}{\\frac{a^{\\underline{i}}}{i!}x^i}=(1+x)^a$\n",
+    "\n",
+    "$ln(F(x))=-\\sum_{i=1}^{\\infty}{\\frac{(1-F(x))^i}{i}}$\n",
+    "\n",
+    "$e^{F(x)}=\\sum_{i=0}^{\\infty}{\\frac{F(x)^i}{i!}}$"
    ]
   }
  ],
@@ -47,7 +50,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
