--- a/notes/newtons_identities.md.ipynb
+++ b/notes/newtons_identities.md.ipynb
@@ -80,6 +80,10 @@
     "\n",
     "$e_k(x_1,x_2,...,x_n)=\\begin{bmatrix}n+1 \\\\ n+1-k\\end{bmatrix}$.\n",
     "\n",
+    "#### Relation with power sums\n",
+    "\n",
+    "$kh_k=\\sum_{i=1}^{k}{h_{k-i}p_i}$\n",
+    "\n",
     "## Power sums\n",
     "\n",
     "$p_k(x_1,x_2,...,x_n)=\\sum_{i=1}^{n}{x_i^k}$.\n",
