--- a/notes/formal_power_series.md.ipynb
+++ b/notes/formal_power_series.md.ipynb
@@ -28,6 +28,8 @@
     "\n",
     "$\\sum_{i=0}^{\\infty}{\\frac{a^{\\underline{i}}}{i!}x^i}=(1+x)^a$\n",
     "\n",
+    "$ln(\\frac{1}{1-x})=\\sum_{i=1}^{\\infty}{\\frac{x^i}{i}}$\n",
+    "\n",
     "$ln(F(x))=-\\sum_{i=1}^{\\infty}{\\frac{(1-F(x))^i}{i}}$\n",
     "\n",
     "$e^{F(x)}=\\sum_{i=0}^{\\infty}{\\frac{F(x)^i}{i!}}$"
