--- a/notes/matroid.md.ipynb
+++ b/notes/matroid.md.ipynb
@@ -33,18 +33,18 @@
     "\n",
     "## Min-max theorem\n",
     "\n",
-    "$\\max_{S\\in{I_1\\cap I_2}}{|S|}=\\min_{U\\subseteq S}{(r_1(U)+r_2(S\\backslash U))}$\n",
+    "$\\max_{S\\in{I_1\\cap I_2}}{|S|}=\\min_{U\\subseteq X}{(r_1(U)+r_2(X\\backslash U))}$\n",
     "\n",
     "## Terminology\n",
     "\n",
     "$D_{(M_1,M_2)}{(S)}$ is the exchange graph $G = (S \\cup (X\\backslash S), E)$ where:\n",
-    "- $(x,y)\\in E \\Leftrightarrow x\\in S, y\\in (X\\backslash S), I-x+y\\in I_1$.\n",
-    "- $(y,x)\\in E \\Leftrightarrow x\\in S, y\\in (X\\backslash S), I-x+y\\in I_2$.\n",
+    "- $(x,y)\\in E \\Leftrightarrow x\\in S, y\\in (X\\backslash S), S-x+y\\in I_1$.\n",
+    "- $(y,x)\\in E \\Leftrightarrow x\\in S, y\\in (X\\backslash S), S-x+y\\in I_2$.\n",
     "\n",
     "\n",
-    "$y\\in Y_1 \\Leftrightarrow y\\in (X\\backslash S), I+y\\in I_1$.\n",
+    "$y\\in Y_1 \\Leftrightarrow y\\in (X\\backslash S), S+y\\in I_1$.\n",
     "\n",
-    "$y\\in Y_2 \\Leftrightarrow y\\in (X\\backslash S), I+y\\in I_2$.\n",
+    "$y\\in Y_2 \\Leftrightarrow y\\in (X\\backslash S), S+y\\in I_2$.\n",
     "\n",
     "\n",
     "## Algorithm\n",
