Extend to weighted version

--- a/notes/matroid.md.ipynb
+++ b/notes/matroid.md.ipynb
@@ -56,6 +56,9 @@
     "3. Find augmenting path without shortcuts $P$ from any element in $Y_1$ to any element in $Y_2$.\n",
     "4. Alternate inclusion into $S$ of all elements in $P$.\n",
     "\n",
+    "## Extend to weighted version\n",
+    "\n",
+    "When finding augmenting path, minimize pair $(Weight, NumOfEdges)$.\n",
     "\n",
     "## Reference\n",
     "\n",
