--- a/notes/matroid.md.ipynb
+++ b/notes/matroid.md.ipynb
@@ -60,7 +60,11 @@
     "\n",
     "When finding augmenting path, minimize pair $(Weight, NumOfEdges)$.\n",
     "\n",
-    "## Reference\n",
+    "# Puzzles\n",
+    "\n",
+    "Weighted matroid intersection: http://codeforces.com/contest/1556/problem/H\n",
+    "\n",
+    "# Reference\n",
     "\n",
     "https://codeforces.com/blog/entry/69287"
    ]
