--- a/notes/inversion.md.ipynb
+++ b/notes/inversion.md.ipynb
@@ -19,9 +19,9 @@
     "\n",
     "At the first step, we find some $B$ s.t. $BA=I$, then:\n",
     "\n",
-    "$x=Ix\\\\\n",
-    "x=(BA)x\\\\\n",
-    "x=B(Ax)\\\\\n",
+    "$x=Ix\\iff\\\\\n",
+    "x=(BA)x\\iff\\\\\n",
+    "x=B(Ax)\\iff\\\\\n",
     "x=Bb\\\\\n",
     "Q.E.D.$\n",
     "\n",
@@ -39,10 +39,10 @@
     "\n",
     "### Prove\n",
     "\n",
-    "$g[n] = \\sum_{m=0}^{n}{\\binom{n}{m}[n-m=0]g[m]}\\\\\n",
-    "g[n] = \\sum_{m=0}^{n}{\\binom{n}{m}\\sum_{i=0}^{n-m}{\\binom{n-m}{i}(-1)^{i}g[m]}}\\\\\n",
-    "g[n] = \\sum_{i=0}^{n}{\\binom{n}{i}(-1)^i\\sum_{m=0}^{n-i}{\\binom{n-i}{m}g[m]}}\\\\\n",
-    "g[n] = \\sum_{i=0}^{n}{\\binom{n}{i}(-1)^if[n-i]}\\\\\n",
+    "$g[n] = \\sum_{m=0}^{n}{\\binom{n}{m}[n-m=0]g[m]}\\iff\\\\\n",
+    "g[n] = \\sum_{m=0}^{n}{\\binom{n}{m}\\sum_{i=0}^{n-m}{\\binom{n-m}{i}(-1)^{i}g[m]}}\\iff\\\\\n",
+    "g[n] = \\sum_{i=0}^{n}{\\binom{n}{i}(-1)^i\\sum_{m=0}^{n-i}{\\binom{n-i}{m}g[m]}}\\iff\\\\\n",
+    "g[n] = \\sum_{i=0}^{n}{\\binom{n}{i}(-1)^if[n-i]}\\iff\\\\\n",
     "g[n] = \\sum_{i=0}^{n}{\\binom{n}{n-i}(-1)^{n-i}f[i]}\\\\\n",
     "Q.E.D.$\n",
     "\n",
@@ -58,10 +58,10 @@
     "\n",
     "### Prove\n",
     "\n",
-    "$g[n] = \\sum_{m|n}[\\frac{n}{m}=1]g[m]\\\\\n",
-    "g[n] = \\sum_{m|n}\\sum_{d|\\frac{n}{m}}\\mu(d)g[m]\\\\\n",
-    "g[n] = \\sum_{d|n}\\mu(d)\\sum_{m|\\frac{n}{d}}g[m]\\\\\n",
-    "g[n] = \\sum_{d|n}\\mu(d)f[\\frac{n}{d}]\\\\\n",
+    "$g[n] = \\sum_{m|n}[\\frac{n}{m}=1]g[m]\\iff\\\\\n",
+    "g[n] = \\sum_{m|n}\\sum_{d|\\frac{n}{m}}\\mu(d)g[m]\\iff\\\\\n",
+    "g[n] = \\sum_{d|n}\\mu(d)\\sum_{m|\\frac{n}{d}}g[m]\\iff\\\\\n",
+    "g[n] = \\sum_{d|n}\\mu(d)f[\\frac{n}{d}]\\iff\\\\\n",
     "g[n] = \\sum_{d|n}\\mu(\\frac{n}{d})f[d]\\\\\n",
     "Q.E.D.$\n",
     "\n",
@@ -77,10 +77,10 @@
     "\n",
     "### Prove\n",
     "\n",
-    "$g[S] = \\sum_{W\\subseteq S}[S\\setminus W = \\emptyset]g[W]\\\\\n",
-    "g[S] = \\sum_{W\\subseteq S}\\sum_{T\\subseteq {S\\setminus W}}(-1)^{|T|}g[W]\\\\\n",
-    "g[S] = \\sum_{T\\subseteq S}(-1)^{|T|}\\sum_{W\\subseteq {S\\setminus T}}g[W]\\\\\n",
-    "g[S] = \\sum_{T\\subseteq S}(-1)^{|T|}g[S\\setminus T]\\\\\n",
+    "$g[S] = \\sum_{W\\subseteq S}[S\\setminus W = \\emptyset]g[W]\\iff\\\\\n",
+    "g[S] = \\sum_{W\\subseteq S}\\sum_{T\\subseteq {S\\setminus W}}(-1)^{|T|}g[W]\\iff\\\\\n",
+    "g[S] = \\sum_{T\\subseteq S}(-1)^{|T|}\\sum_{W\\subseteq {S\\setminus T}}g[W]\\iff\\\\\n",
+    "g[S] = \\sum_{T\\subseteq S}(-1)^{|T|}g[S\\setminus T]\\iff\\\\\n",
     "g[S] = \\sum_{T\\subseteq S}(-1)^{|S|-|T|}g[T]\\\\\n",
     "Q.E.D.$\n",
     "\n",
