Add applications of unit_root_inversion

--- a/notes/inversion.md.ipynb
+++ b/notes/inversion.md.ipynb
@@ -96,6 +96,15 @@
     "\n",
     "$g[m]=\\frac{1}{n}\\sum_{k=0}^{n-1}\\omega_n^{-mk}f[k]$.\n",
     "\n",
+    "### Applications\n",
+    "\n",
+    "$[p+q\\equiv r \\mod n]\\iff\\\\\n",
+    "[p+q-r\\equiv 0 \\mod n]\\iff\\\\\n",
+    "\\frac{1}{n}\\sum_{k=0}^{n-1}\\omega_n^{(p+q-r)k}\\iff\\\\\n",
+    "\\frac{1}{n}\\sum_{k=0}^{n-1}\\omega_n^{-rk}\\omega_n^{pk}\\omega_n^{qk}$\n",
+    "\n",
+    "at where $p,q,r$ looks more independent.\n",
+    "\n",
     "# Reference\n",
     "[炫酷反演魔术](https://vfleaking.blog.uoj.ac/blog/87)"
    ]
