Add common-used multiplicative functions

--- a/notes/dus_sieve.md.ipynb
+++ b/notes/dus_sieve.md.ipynb
@@ -51,9 +51,36 @@
     "\n",
     "优化: 若先线性预处理出前$n^{\\frac{2}{3}}$项, 则算法整体复杂度为$O(n^{\\frac{2}{3}})$.\n",
     "\n",
+    "## 常见的积性函数及等式\n",
+    "\n",
+    "$I: 单位函数, I[n]=1$\n",
+    "\n",
+    "$id: 恒等函数, id[n]=n$\n",
+    "\n",
+    "$id_k: 幂函数, id_k[n]=n^k$\n",
+    "\n",
+    "$\\epsilon: 元函数, \\epsilon[n]=\\left\\{\\begin{array}{l}1, n = 1\\\\ 0, otherwise\\end{array}\\right.$\n",
+    "\n",
+    "$d: 约数个数函数, d[n]=\\sum_{d|n}1$\n",
+    "\n",
+    "$\\sigma: 约数和函数, \\sigma[n]=\\sum_{d|n}d$\n",
+    "\n",
+    "$\\phi: 欧拉函数, \\phi[n]=\\sum_{i=1}^{n}[gcd(n,i)=1]$\n",
+    "\n",
+    "$\\mu: 莫比乌斯函数, \\mu[n]=\\left\\{\\begin{array}{l}1, n=1\\\\(-1)^r, n=\\Pi_{i=1}^{r}{p_i}其中p_i两两不同\\\\0,otherwise\\end{array}\\right.$\n",
+    "\n",
+    "$\\mu \\ast I = \\epsilon$\n",
+    "\n",
+    "$\\phi \\ast I = id$\n",
+    "\n",
+    "$id \\ast \\mu = \\phi$\n",
+    "\n",
+    "\n",
     "# Reference\n",
     "\n",
     "https://oi-wiki.org/math/number-theory/du/\n",
+    "\n",
+    "https://www.cnblogs.com/peng-ym/p/9446555.html\n",
     "\n",
     "https://zhuanlan.zhihu.com/p/137619492"
    ]
