Fix encoding issue

--- a/notes/dus_sieve.md.ipynb
+++ b/notes/dus_sieve.md.ipynb
@@ -53,21 +53,21 @@
     "\n",
     "## 常见的积性函数及等式\n",
     "\n",
-    "$I: 单位函数, I[n]=1$\n",
+    "元函数 $\\epsilon: \\epsilon[n]=\\left\\{\\begin{array}{l}1, n = 1\\\\ 0, otherwise\\end{array}\\right.$\n",
     "\n",
-    "$id: 恒等函数, id[n]=n$\n",
+    "单位函数 $I: I[n]=1$\n",
     "\n",
-    "$id_k: 幂函数, id_k[n]=n^k$\n",
+    "恒等函数 $id: id[n]=n$\n",
     "\n",
-    "$\\epsilon: 元函数, \\epsilon[n]=\\left\\{\\begin{array}{l}1, n = 1\\\\ 0, otherwise\\end{array}\\right.$\n",
+    "幂函数 $id_k: id_k[n]=n^k$\n",
     "\n",
-    "$d: 约数个数函数, d[n]=\\sum_{d|n}1$\n",
+    "约数个数函数 $d: d[n]=\\sum_{d|n}1$\n",
     "\n",
-    "$\\sigma: 约数和函数, \\sigma[n]=\\sum_{d|n}d$\n",
+    "约数和函数 $\\sigma: \\sigma[n]=\\sum_{d|n}d$\n",
     "\n",
-    "$\\phi: 欧拉函数, \\phi[n]=\\sum_{i=1}^{n}[gcd(n,i)=1]$\n",
+    "欧拉函数 $\\phi: \\phi[n]=\\sum_{i=1}^{n}[gcd(n,i)=1]$\n",
     "\n",
-    "$\\mu: 莫比乌斯函数, \\mu[n]=\\left\\{\\begin{array}{l}1, n=1\\\\(-1)^r, n=\\Pi_{i=1}^{r}{p_i}其中p_i两两不同\\\\0,otherwise\\end{array}\\right.$\n",
+    "莫比乌斯函数 $\\mu: \\mu[n]=\\left\\{\\begin{array}{l}1, n=1\\\\(-1)^r, n=\\Pi_{i=1}^{r}{p_i^{\\alpha_i}},\\alpha_i=1\\\\0,otherwise\\end{array}\\right.$\n",
     "\n",
     "$\\mu \\ast I = \\epsilon$\n",
     "\n",
