Add applications of subset convolution; Fix naming

--- a/notes/inversion.md.ipynb
+++ b/notes/inversion.md.ipynb
@@ -84,6 +84,30 @@
     "g[S] = \\sum_{T\\subseteq S}(-1)^{|S|-|T|}g[T]\\\\\n",
     "Q.E.D.$\n",
     "\n",
+    "### Applications\n",
+    "\n",
+    "#### A1\n",
+    "\n",
+    "对于任意的关于集合$S$的函数, 我们有:\n",
+    "\n",
+    "$f[S] = \\sum_{T\\subseteq S}\\sum_{P\\subseteq T}(-1)^{|T|-|P|}f(P)$\n",
+    "\n",
+    "##### Prove\n",
+    "\n",
+    "$RHS = \\sum_{P\\subseteq S}f[P]\\sum_{P\\subseteq T \\subseteq S}(-1)^{|T|-|P|}$\n",
+    "\n",
+    "$RHS = \\sum_{P\\subseteq S}f[P]\\sum_{i=0}^{|S|-|P|}\\binom{|S|-|P|}{i}(-1)^{i}$\n",
+    "\n",
+    "$RHS = \\sum_{P\\subseteq S}f[P](1 - 1)^{|S|-|P|}$\n",
+    "\n",
+    "$RHS = f[S] = LHS$\n",
+    "\n",
+    "$Q.E.D.$\n",
+    "\n",
+    "##### 相关题目\n",
+    "\n",
+    "https://www.luogu.com.cn/problem/P5206\n",
+    "\n",
     "## 单位根反演\n",
     "\n",
     "### Core formula\n",
