Add common-used format

--- a/notes/stirling_number.md.ipynb
+++ b/notes/stirling_number.md.ipynb
@@ -45,9 +45,9 @@
     "\n",
     "第二类斯特林数可以用下降阶乘定义为:\n",
     "\n",
-    "$x^n=\\sum_{k=0}^{n}\\begin{Bmatrix}n\\\\k\\end{Bmatrix}x^{\\underline{k}}$\n",
+    "$x^n=\\sum_{k=0}^{n}\\begin{Bmatrix}n\\\\k\\end{Bmatrix}x^{\\underline{k}}=\\sum_{k=0}^{n}\\begin{Bmatrix}n\\\\k\\end{Bmatrix}\\binom{x}{k}k!$\n",
     "\n",
-    "其中$\\begin{Bmatrix}n\\\\k\\end{Bmatrix}$即为第二类斯特林数, 或记为$S(n,k)$.\n",
+    "其中$\\begin{Bmatrix}n\\\\k\\end{Bmatrix}$即为第二类斯特林数, 或记为$S(n,k)$. 等式最右侧常用于对形如$x^n$的贡献进行分解.\n",
     "\n",
     "第二类斯特林数可以看作(或定义为)将含有$n$个元素的集合拆为$k$个非空集合的方案数.\n",
     "\n",
