--- a/notes/lagrange_inversion.md.ipynb
+++ b/notes/lagrange_inversion.md.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "已知$F$, 可以用以下公式得到$G$的某一项:\n",
     "\n",
-    "$[x^n]G(x)=\\frac{1}{n}[x^{-1}F(x)^{-n}=\\frac{1}{n}[x^{n-1}](\\frac{F(x)}{x})^{-n}$.\n",
+    "$[x^n]G(x)=\\frac{1}{n}[x^{-1}]F(x)^{-n}=\\frac{1}{n}[x^{n-1}](\\frac{F(x)}{x})^{-n}$.\n",
     "\n",
     "引理: 对于常系数为$0$且$[x^1]$系数非$0$的整式$F(x)$, 有 $[x^{-1}]F'(x)F(x)^k=[k=-1]$.\n",
     "\n",
