--- a/notes/dus_sieve.md.ipynb
+++ b/notes/dus_sieve.md.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "## 时间复杂度\n",
     "\n",
-    "假定$\\sum_{i=1}^{n}h[i]$和$g[i]$都能$O(1)$得出, 则算法整体复杂度为$O(n^{\\frac{3}{4}})$.\n",
+    "假定$\\sum_{i=1}^{n}h[i]$和$\\sum_{i=l}^{r}g[i]$都能$O(1)$得出, 则算法整体复杂度为$O(n^{\\frac{3}{4}})$.\n",
     "\n",
     "优化: 若先线性预处理出前$n^{\\frac{2}{3}}$项, 则算法整体复杂度为$O(n^{\\frac{2}{3}})$.\n",
     "\n",
