--- a/notes/min_25_sieve.md.ipynb
+++ b/notes/min_25_sieve.md.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "由定义知 $\\pi(n)=g(k',n)$, 其中 $k'$ 为最大的满足 $p_k^2\\le n$ 的 $k$.\n",
     "\n",
-    "观察 [[#定理1]] 可知, $g(\\cdot,\\cdot)$ 仅在 $O(\\sqrt{n})$ 处取值.\n",
+    "观察 [[#定理1]] 可知, $g(\\cdot,\\cdot)$ 仅在形如 $\\lfloor\\frac{n}{i}\\rfloor$ 处取值, 故只有 $O(\\sqrt{n})$ 种.\n",
     "\n",
     "使用 [[#定理1]] 直接算的复杂度是 $O(\\frac{n^{\\frac{3}{4}}}{log(n)})$. 不会证."
    ]
