--- a/notes/formal_power_series.md.ipynb
+++ b/notes/formal_power_series.md.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "1a866992",
    "metadata": {},
    "source": [
     "# 形式幂级数\n",
@@ -18,9 +19,9 @@
     "\n",
     "$x\\frac{\\partial}{\\partial{x}}\\sum_{i=0}^{\\infty}{a_ix^i}=\\sum_{i=0}^{\\infty}{ia_ix^i}$\n",
     "\n",
-    "$\\sum_{i=0}^{n}{(-1)^i\\binom{n}{i}}=(1-x)^n$\n",
+    "$\\sum_{i=0}^{n}{\\binom{n}{i}(-x)^i}=(1-x)^n$\n",
     "\n",
-    "$\\sum_{i=0}^{\\infty}{\\binom{n+i}{i}}=\\frac{1}{(1-x)^{n+1}}$\n",
+    "$\\sum_{i=0}^{\\infty}{\\binom{n+i}{i}x^i}=\\frac{1}{(1-x)^{n+1}}$\n",
     "\n",
     "平移: $[x^n]x^tF(x)=F[n-t]$\n",
     "\n",
@@ -32,7 +33,17 @@
     "\n",
     "$ln(F(x))=-\\sum_{i=1}^{\\infty}{\\frac{(1-F(x))^i}{i}}$\n",
     "\n",
-    "$e^{F(x)}=\\sum_{i=0}^{\\infty}{\\frac{F(x)^i}{i!}}$"
+    "$e^{F(x)}=\\sum_{i=0}^{\\infty}{\\frac{F(x)^i}{i!}}$\n",
+    "\n",
+    "## 一些特殊情形下 EGF 与 OGF 的转化\n",
+    "\n",
+    "首先定义 $F_{exp}(x)=\\sum_{i=0}^{\\infty}\\frac{f_ix_i}{i!}$ 和 $F(x)=\\sum_{i=0}^{\\infty}f_ix^i$.\n",
+    "\n",
+    "以下式子常用于已知EGF表示, 需要求OGF表示(或反过来)的场合.\n",
+    "\n",
+    "$F_{exp}(x)=\\sum_{i}a_ie^{C_ix}\\Leftrightarrow F(x)=\\sum_{i}\\frac{a_i}{1-C_ix}$.\n",
+    "\n",
+    "$F_{exp}(x)=\\sum_{i}x^{D_i}e^{C_ix}\\Leftrightarrow F(x)=\\sum_{i}\\frac{D_i!x^{D_i}}{(1-C_ix)^{D_i+1}}$."
    ]
   }
  ],
@@ -52,7 +63,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
