--- a/notes/formal_power_series.md.ipynb
+++ b/notes/formal_power_series.md.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "1a866992",
    "metadata": {},
    "source": [
     "# 形式幂级数\n",
@@ -18,9 +19,9 @@
     "\n",
     "$x\\frac{\\partial}{\\partial{x}}\\sum_{i=0}^{\\infty}{a_ix^i}=\\sum_{i=0}^{\\infty}{ia_ix^i}$\n",
     "\n",
-    "$\\sum_{i=0}^{n}{(-1)^i\\binom{n}{i}}=(1-x)^n$\n",
+    "$\\sum_{i=0}^{n}{\\binom{n}{i}(-x)^i}=(1-x)^n$\n",
     "\n",
-    "$\\sum_{i=0}^{\\infty}{\\binom{n+i}{i}}=\\frac{1}{(1-x)^{n+1}}$\n",
+    "$\\sum_{i=0}^{\\infty}{\\binom{n+i}{i}x^i}=\\frac{1}{(1-x)^{n+1}}$\n",
     "\n",
     "平移: $[x^n]x^tF(x)=F[n-t]$\n",
     "\n",
@@ -52,7 +53,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
