--- a/notes/formal_power_series.md.ipynb
+++ b/notes/formal_power_series.md.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "以下式子常用于已知EGF表示, 需要求OGF表示(或反过来)的场合.\n",
     "\n",
-    "$F_{exp}(x)=\\sum_{i}a_ie^{C_ix}\\Leftrightarrow F(x)=\\sum_{i}\\frac{a_i}{1-C_ix}$.\n",
+    "$F_{exp}(x)=\\sum_{i}A_ie^{C_ix}\\Leftrightarrow F(x)=\\sum_{i}\\frac{A_i}{1-C_ix}$.\n",
     "\n",
     "$F_{exp}(x)=\\sum_{i}x^{D_i}e^{C_ix}\\Leftrightarrow F(x)=\\sum_{i}\\frac{D_i!x^{D_i}}{(1-C_ix)^{D_i+1}}$."
    ]
