--- a/notes/formal_power_series.md.ipynb
+++ b/notes/formal_power_series.md.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "## 一些特殊情形下 EGF 与 OGF 的转化\n",
     "\n",
-    "首先定义 $F_{exp}(x)=\\sum_{i=0}^{\\infty}\\frac{f_ix_i}{i!}$ 和 $F(x)=\\sum_{i=0}^{\\infty}f_ix^i$.\n",
+    "首先定义 $F_{exp}(x)=\\sum_{i=0}^{\\infty}\\frac{f_ix^i}{i!}$ 和 $F(x)=\\sum_{i=0}^{\\infty}f_ix^i$.\n",
     "\n",
     "以下式子常用于已知EGF表示, 需要求OGF表示(或反过来)的场合.\n",
     "\n",
