Update binomial relatives

--- a/notes/binomial.md.ipynb
+++ b/notes/binomial.md.ipynb
@@ -13,19 +13,29 @@
     "\n",
     "吸收/释放: $\\binom{n}{m}=\\frac{n}{m}\\binom{n-1}{m-1}$\n",
     "\n",
-    "二项式定理: $(x+y)^k=\\sum_{i=0}^{k}{\\binom{k}{i}x^iy^{k-i}}$\n",
+    "递推: $\\binom{n}{m}=\\binom{n-1}{m}+\\binom{n-1}{m-1}=\\frac{n}{m}\\binom{n-1}{m-1}$\n",
     "\n",
-    "递推: $\\binom{n}{m}=\\binom{n-1}{m}+\\binom{n-1}{m-1}$\n",
-    "\n",
-    "平行求和: $\\sum_{i=0}^{n}{\\binom{r+i}{i}}=\\binom{r+n+1}{n}$\n",
+    "平行求和: $\\sum_{i=0}^{n}{\\binom{r+i}{i}}=\\sum_{i=0}^{n}{\\binom{r+i}{r}}=\\binom{r+n+1}{n}$\n",
     "\n",
     "上指标求和: $\\sum_{i=0}^{n}{\\binom{i}{m}}=\\binom{n+1}{m+1}$\n",
+    "\n",
+    "斐波那契: $\\forall n\\ge 0, \\sum_{i=0}^{n}\\binom{n-i}{i}=fib_{n}$. Where $fib_0=fib_1=1,fib_i=fib_{i-1}+fib_{i-2}, \\forall i\\ge 2$.\n",
     "\n",
     "范德蒙德卷积: \n",
     "\n",
     "$F(x)$ = $(1+x)^{n+m}=(1+x)^n(1+x)^m$\n",
     "\n",
     "$F[k]$ = $\\binom{n+m}{k}=\\sum_{i=0}^{k}{\\binom{n}{i}\\binom{m}{k-i}}$\n",
+    "\n",
+    "二项式定理:\n",
+    "\n",
+    "$(x+y)^k=\\sum_{i=0}^{k}{\\binom{k}{i}x^iy^{k-i}}$\n",
+    "\n",
+    "$\\sum_{i=0}^{n}\\binom{n}{i}=2^n$\n",
+    "\n",
+    "$\\sum_{i\\ge 0}\\binom{n}{2i}=\\sum_{i\\ge 0}\\binom{n}{2i+1}=2^{n-1}$\n",
+    "\n",
+    "容斥系数部分和: $\\sum_{i=0}^{k}(-1)^{i}\\binom{n}{i}=(-1)^k\\binom{n-1}{k}$\n",
     "\n",
     "广义二项式/广义二项式定理:\n",
     "\n",
@@ -45,7 +55,30 @@
     "\n",
     "$(x+y)^{\\overline{n}}=\\sum_{i=0}^{n}{\\binom{n}{i}x^{\\overline{i}}y^{\\overline{n-i}}}$\n",
     "\n",
-    "(tips: 挪一挪实际上就是范德蒙德卷积)\n"
+    "(tips: 挪一挪实际上就是范德蒙德卷积)\n",
+    "\n",
+    "其他等式:\n",
+    "\n",
+    "$\\sum_{k=q}^{n}\\binom{n}{k}\\binom{k}{q}=2^{n-q}\\binom{n}{q}$\n",
+    "\n",
+    "$\\sum_{i=0}^{n}\\binom{2n}{i}=2^{2n-1}+\\frac{1}{2}\\binom{2n}{n}$\n",
+    "\n",
+    "$\\sum_{i=0}^{n}\\binom{2n}{i}^2=\\frac{1}{2}(\\binom{4n}{2n}+\\binom{2n}{n}^2)$\n",
+    "\n",
+    "二项式与斯特林数:\n",
+    "\n",
+    "$\\sum_{i=0}^{n}\\binom{n}{i}\\cdot i=n\\cdot 2^{n-1}$\n",
+    "\n",
+    "$\\sum_{i=0}^{n}\\binom{n}{i}\\cdot i^2=(n+n^2)\\cdot 2^{n-2}$\n",
+    "\n",
+    "一般情形:\n",
+    "\n",
+    "$\\begin{array}{ll}\n",
+    "\\sum_{i=0}^{n}\\binom{n}{i}\\cdot i^k&=\\sum_{i=0}^{n}\\binom{n}{i}\\sum_{j=0}^{k}\\begin{Bmatrix}k\\\\j\\end{Bmatrix}i^{\\underline{j}}\\\\\n",
+    "&=\\sum_{i=0}^{n}\\binom{n}{i}\\sum_{j=0}^{k}\\begin{Bmatrix}k\\\\j\\end{Bmatrix}j!\\binom{i}{j}\\\\\n",
+    "&=\\sum_{j=0}^{k}\\begin{Bmatrix}k\\\\j\\end{Bmatrix}\\sum_{i=0}^{n}\\binom{n}{i}j!\\binom{i}{j}\\\\\n",
+    "&=\\sum_{j=0}^{k}\\begin{Bmatrix}k\\\\j\\end{Bmatrix}2^{n-j}j!\\binom{n}{j}\\\\\n",
+    "\\end{array}$"
    ]
   }
  ],
