--- a/README
+++ b/README
@@ -1,1 +1,5 @@
 Personal templates used for competitive contest.
+
+Besides code snippets, there are some notes and editorials too. They are all written in markdown
+format, which is not readable from the github page. For convenience, a readable version is presented inside the
+subfolder `generated/`.
